<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/maon_bg"
    android:orientation="vertical"
    android:id="@+id/parentLayout"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar_bg"
        android:gravity="center" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:onClick="back"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/ACTIVITY_TITLE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/set_defaults"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/enter_default_terminal"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/defaultTerminal"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/textfield_white_small"
        android:gravity="center"
        android:enabled="false"
        android:hint=""
        android:inputType="phone"
        android:textColor="@color/lite_gray"
        android:textSize="21sp" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/ok"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button_small"
                android:onClick="okClicked"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/clear"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button_small"
                android:onClick="clearClicked"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>