<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/maon_bg">

    <RelativeLayout
        android:id="@+id/lin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar_bg"
        >

        <TextView
            android:id="@+id/countdownTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/drivingMode"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView1"
            android:contentDescription="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:src="@drawable/menu_icon" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/header_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:text="@string/drivingModeText"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/noPhoneUseIcon"
        android:layout_width="239dp"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:src="@drawable/no_phone_use_d_wosign_white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:text="@string/drivingOverrideMsg"
        android:id="@+id/drivingOverrideMsg_tv"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/pay_number_textbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:hint="Pay Number"
        android:textAlignment="center"
        android:inputType="number"
        android:background="@drawable/textfield"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:visibility="invisible"
        android:ellipsize="end"
        android:ems="10"
        android:imeOptions="actionDone"
        android:imeActionLabel="DONE"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/notDrivingButton"
        android:text="@string/notDrivingButtonText"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/drivingOverrideMsg2_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drivingOverridePayNumMsg2"
        android:visibility="invisible"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/contactSupport_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:text="@string/contact_support"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="italic" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            style="@style/UtilityButton"
            android:id="@+id/EndDrivingSimulation"
            android:text="End Driving Simulation"
            android:onClick="onEndDrivingSimulationClick"
            android:layout_above="@+id/LocationStatusArea"
            android:visibility="gone"
            />

        <RelativeLayout
            android:id="@+id/LocationStatusArea"
            android:orientation="horizontal"
            android:layout_height = "wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:clickable="false"
            android:background="#00000000">


            <ImageView
                android:id="@+id/GpsStatusIcon"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_gps_fixed_24px" />

            <TextView
                android:id="@+id/GpsStatusMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/GpsStatusIcon"
                android:paddingLeft="6dp"
                android:text=""
                android:textColor="@color/lite_gray"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:visibility="visible" />

            <TextView
                android:id="@+id/LocationMessageBox"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/GpsStatusMsg"
                android:layout_centerVertical="true"
                android:paddingLeft="20dp"
                android:text=""
                android:textSize="14sp"
                android:textColor="@color/lite_gray"
                android:textStyle="bold" />

        </RelativeLayout>
    </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</LinearLayout>