<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/maon_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar_bg"
        android:gravity="center" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:onClick="back"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/ACTIVITY_TITLE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/damage_code_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:onClick="menuList"
            android:src="@drawable/menu_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/enter_area_code"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/textfield_white_small"
        android:gravity="center"
        android:hint=""
        android:inputType="number"
        android:textColor="@color/lite_gray"
        android:textSize="21sp" >
        <requestFocus/>
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >


       <Button
            android:id="@+id/pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_small"
            android:onClick="menuList"
            android:text="Pick from list"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
               <Button
            android:id="@+id/ok"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_small"
            android:onClick="checkCode"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>