<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="12dp"
    android:background="@drawable/maon_bg">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/customTitle"
        android:text="Warning: Permission Needed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/topPrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:textSize="18sp"
        android:textColor="@color/DarkGray"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/topPrompt"
        android:text="@string/piccolo_permission_prompt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/customTitle"
        app:layout_constraintBottom_toTopOf="@id/piccoloPermissionDialogImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:textSize="16sp"
        android:textColor="@color/DarkGray"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <ImageView
        android:id="@+id/piccoloPermissionDialogImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/piccolo_permission_dialog"
        app:layout_constraintTop_toBottomOf="@id/topPrompt"
        app:layout_constraintBottom_toTopOf="@id/bottomPrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/bottomPrompt"
        android:text="@string/piccolo_permission_prompt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/piccoloPermissionDialogImage"
        app:layout_constraintBottom_toTopOf="@id/ok_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:textSize="16sp"
        android:textColor="@color/DarkGray"
        android:textStyle="italic"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/bottomPrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/ok"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>